--- a/style.css
+++ b/style.css
@@ -51,7 +51,8 @@ body {
     width: 30%;
     height: 10px;
     background: var(--second-color);
-    border-radius: 5px;
+    border-radius: 10px;
+    transition: all 0.3s ease;
 }
 #numbers {
     width: 100px;
@@ -63,4 +64,36 @@ body {
     justify-content: center;
     font-size: 30px;
     font-weight: bold;
+}
+
+form{
+    margin-top: 60px;
+    width: 100%;
+    display: flex;
+    gap: 10px;
+}
+input{
+    flex: 1;
+    padding: 16px;
+    background-color:var(--second-bg);
+    border: 1px solid var(--main-color);
+    border-radius: 10px;
+    outline: none;
+    color: var(--text-color);
+}
+button{
+    padding: 16px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--main-color);
+    color: var(--text-color);
+    font-size: 30px;
+    font-weight: bold;
+    border: none;
+    outline: none;
+   
 }
