--- a/style.css
+++ b/style.css
@@ -97,3 +97,42 @@ button{
     outline: none;
     cursor: pointer;
 }
+
+
+#task-list{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 30px;
+    width: 100%;
+    list-style: none;
+}
+.taskItem{
+    width: 100%;
+    display: flex;
+    background: var(--second-bg);
+    padding: 10px;
+    border-radius: 10px;
+    justify-content: space-between;
+    align-items: center;
+}
+.taskItem img{
+    width: 24px;
+    height: 24px;
+}
+.task{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.taskItem img{
+    width: 24px;
+    height: 24px;
+    margin: 0 10px;
+    cursor: pointer;
+}
+.task input{
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
